# euler

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
deploy/: checkout  euler.service  setup
src/: commands.rs  course.rs  handler.rs  instructor.rs  main.rs
src/commands/: ai.rs  course.rs  help.rs  problem.rs
