[package]
name = "wmt"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serenity = "0.11.5"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
