[package]
name = "euler"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
chatgpt_rs = "1.1.10"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
rand = "0.8.5"
regex = "1.8.4"
reqwest = "0.11.18"
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serenity = { version = "0.11.5", features = ["builder"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
