[package]
name = "euler"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
async-openai = "0.25.0"
dotenv = "0.15.0"
env_logger = "0.10.2"
log = "0.4.25"
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.11.27"
scraper = "0.16.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = { version = "0.11.7", features = ["builder"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
